--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# Xcode user data
-*.xcuserstate
-*.xcuserdata/
-DerivedData/
-build/
-
-# macOS system files
-.DS_Store
-
+.env
+__pycache__
+.vscode
