fix: Update Python script execution command in workflow.

--- a/.github/workflows/daily_log.yml
+++ b/.github/workflows/daily_log.yml
@@ -29,4 +29,4 @@ jobs:
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
           NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
-        run: python -m script.main
+        run: python -m script/main.py
